deploy/builds/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: molejo-builds
  labels:
    app.kubernetes.io/part-of: molejo-platform
