deploy/builds/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buildkitd
  namespace: molejo-builds
spec:
  selector:
    app.kubernetes.io/name: buildkitd
  ports:
    - name: grpc-tls
      port: 1234
      targetPort: grpc-tls
